--- a/stilsett/hovedstilsett.css
+++ b/stilsett/hovedstilsett.css
@@ -6,7 +6,7 @@ body {
         "nav nav nav nav"
         "main main main aside"
         "footer footer footer footer";
-    grid-gap: 2px;
+    grid-gap: 0px;
     max-width: 80%;
     margin: 0 auto;    
 }
@@ -20,6 +20,7 @@ header {
     padding-bottom: 20px;
     border: solid;
     background-image: url("../bilder/bannerbilde.jpg");
+    margin-bottom: 10px;
 }
 
 header h1 {
@@ -39,8 +40,10 @@ nav {
     padding-bottom: 15px;
     padding-top: 15px;
     text-align: center;
+    background-color: #32fa69;
 }
 
+/* Knappene i NAV */
 body nav a {
     background-color: #32fa00;
 	border-radius: 3px;
@@ -48,7 +51,7 @@ body nav a {
 	display: inline-block;
 	color: black;
 	font-family:Arial;
-	font-size: 13px;
+	font-size: 14px;
 	padding: 9px 24px;
 	text-decoration: none;
     text-shadow: 0px 1px 0px #08274d;
@@ -84,6 +87,11 @@ main.singlearticle article#bigarticle h2 {
     border: none;
 }
 
+.githubbilde1 {
+    width: 600px;
+    height: 200px;
+    clear: both;
+}
 
 
 main article h2 {
@@ -102,7 +110,7 @@ main article p {
 /* For artikkel sidene utenom index */
 main.singlearticle article#bigarticle p#brodtekstartikkel {
     border: none;
-    overflow: show;
+   /* overflow: show;*/
     max-height: none;
     height: 500px;
     padding: 5px;
@@ -136,13 +144,6 @@ aside .youtube .responsiviframe {
     left: 0;
     width: 100%;
     border: 0;
-}
-
-/* --*-- */
-aside .youtube responsiviframe:hover {
-    position: relative;
-    width: 1920px;
-    height: 1080px;
 }
 
 aside section#knappgithub {
