--- a/stilsett/hovedstilsett.css
+++ b/stilsett/hovedstilsett.css
@@ -1,3 +1,11 @@
+html {
+    background-image: url("../bilder/bakgrunnbody.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
 body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -19,13 +27,15 @@ header {
     padding-top: 20px;
     padding-bottom: 20px;
     border: solid;
-    background-image: url("../bilder/bannerbilde.jpg");
+    border-radius: 20px;
+    background-image: url("../bilder/undervannbg.jpg");
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 header h1 {
     font-size: 50px;
-    color: rgb(27, 247, 27);
+    color: rgb(101, 170, 202);
     -webkit-text-stroke: rgb(71, 58, 250);
     -webkit-text-stroke-width: 2px;
 }
@@ -37,19 +47,20 @@ nav {
     /*grid-template-columns: repeat(auto-fill, minmax);*/
     /*grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;*/
     border: solid;
+    border-radius: 10px;
     padding-bottom: 15px;
     padding-top: 15px;
     text-align: center;
-    background-color: #32fa69;
+    background-color: #60cdd4;
 }
 
 /* Knappene i NAV */
 body nav a {
-    background-color: #32fa00;
-	border-radius: 3px;
-	border: 1px solid #177445;
+    background-color: #32f1ff;
+	border-radius: 5px;
+	border: 1px solid #1c7792;
 	display: inline-block;
-	color: black;
+    color: black;
 	font-family:Arial;
 	font-size: 14px;
 	padding: 9px 24px;
@@ -68,23 +79,47 @@ main {
     grid-template-columns: 1fr 1fr;
 }
 
-/* Stilerer boksene til aa bli flex i main*/
-main article {
+/* Stilerer boksene til aa bli flex i main i index*/
+main article.indexartikkel {
     border: solid;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     padding: 5px;
     margin-inline-end: 10px;
     margin-top: 10px;
+    background-color: #ceecee;
 }
 
-/* For artikkel sidene utenom index */
-main.singlearticle {
-    grid-template-columns: 1fr;
+/* Endrer tekst i artikler med h2 taggen */
+main article h2 {
+    margin: 7px;
+    display: inline-block;
+    width: 30%;
+    position: absolute;
+
 }
-/* For artikkel sidene utenom index */
-main.singlearticle article#bigarticle h2 {
-    border: none;
+
+/* Stilerer illustrasjonsbildene i index */
+main article.indexartikkel img.indexillubilde {
+    width: 100px;
+    height: 100px;
+    float: right;
+    display: block;
+    margin-left: 75%;
+}
+
+/* Stilerer paragraph i boksene i index */
+main article p.indexparagraph {
+    border: solid;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 8px;
+    height: 75px;
+    max-height: 150px;
+    float: left;
+    /*overflow: scroll;*/
+    background-color: white;
 }
 
 .githubbilde1 {
@@ -93,44 +128,82 @@ main.singlearticle article#bigarticle h2 {
     clear: both;
 }
 
-
-main article h2 {
-    margin: 7px;
+.mediatyperbilde {
+    margin-top: 10px;
+    width: 300px;
+    height: 450px;
 }
 
-main article p {
+.csslayoutsbilde1 {
+    margin-right: 100%;
+    width: 600px;
+    height: 150px;
+    clear: both;
+}
+
+.csslayoutsbilde2 {
+    margin-right: 100%;
+    width: 600px;
+    height: 400px;
+    clear: both;
+}
+
+/* For main i artikkel sidene utenom index */
+main.artikkelmain {
+    grid-template-columns: 1fr;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+article#hovedartikkel {
+    height: 100%;
+}
+
+/* Main artikkel for artikkel sidene */
+main article#hovedartikkel {
+    border-radius: 10px;
     border: solid;
-    padding: 5px;
-    margin: 8px;
-    height: 75px;
-    max-height: 150px;
-    overflow: scroll;
+    background-color: #ceecee;
+    max-height: 1000px;
 }
 
-/* For artikkel sidene utenom index */
-main.singlearticle article#bigarticle p#brodtekstartikkel {
-    border: none;
-   /* overflow: show;*/
-    max-height: none;
-    height: 500px;
-    padding: 5px;
+/* Stilerer H3 taggene i artikkel sidene*/
+h3.storartikkelh3 {
     margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    font-size: 30px;
+    display: inline-block;
+
 }
 
-/*main article a {
-    margin-top: 2px;
-}*/
+/* Brodteksten innenfor artikkel sidene */
+p#brodtekstartikkel {
+    padding: 3px;
+    max-height: 1000px;
+    overflow: show;
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    border: solid;
+    border-radius: 15px;
+}
 
+/* Sidekolonnen */
 aside {
     grid-area: aside;
     display: grid;
     grid-template-columns: 1fr;
     border: solid;
+    border-radius: 10px;
     margin-top: 10px;
+    padding-bottom: 5px;
+    background-color: white;
 }
 
 /*Googlet det aa gjoore en iframe mer responsivt. Det som skjer her naa er at den vil
-vaere responsiv helt til den ikke klarer aa beholde 16.9 aspect ratio paa iframen*/
+vaere responsiv helt til den ikke klarer aa beholde 16.9 aspect ratio paa iframen,
+noe som ikke er ideelt*/
 aside .youtube {
     position: relative;
     overflow: hidden;
@@ -152,7 +225,7 @@ aside section#knappgithub {
     text-align: center;
     max-height: 35px;
     display: inline-block;
-    background-color: rgb(136, 255, 136);
+    background-color: rgb(136, 255, 245);
 }
 
 aside section#knappgithub a {
@@ -162,6 +235,7 @@ aside section#knappgithub a {
     padding-top: 5px;
     padding-bottom: 5px;
     color: red;
+    font-weight: bold;
     font-size: 20px;
     text-decoration: none;
 }
@@ -176,8 +250,10 @@ footer {
     grid-template-columns: 1fr;
     clear: both;
     border: solid;
+    border-radius: 10px;
     text-align: center;
-    margin-top: 10px;
-    background-color: gainsboro;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    background-color: rgb(139, 195, 233);
 }
 
